[package]
name = "udp_rdt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1"
rand = "0.8"

