[package]
name = "udp_rdt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[[bin]]
name = "client"

[[bin]]
name = "gbn_peer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1"
rand = "0.8"
thiserror = "1"
futures = "0.3"
clap = { version = "3", features = ["derive"] }
